WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191175
REGRESSION(
r237547
): Exception handlers should be aware of wide opcodes when JIT is disabled
https://bugs.webkit.org/show_bug.cgi?id=191175
Summary
REGRESSION(r237547): Exception handlers should be aware of wide opcodes when ...
Tadeu Zagallo
Reported
2018-11-01 16:04:23 PDT
https://bugs.webkit.org/show_bug.cgi?id=191108
did not handle the case where JIT is not enabled
Attachments
Patch
(2.33 KB, patch)
2018-11-01 16:07 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.22 MB, application/zip)
2018-11-01 18:18 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2018-11-01 16:07:38 PDT
Created
attachment 353657
[details]
Patch
Keith Miller
Comment 2
2018-11-01 18:05:40 PDT
Comment on
attachment 353657
[details]
Patch r=me.
EWS Watchlist
Comment 3
2018-11-01 18:18:26 PDT
Comment on
attachment 353657
[details]
Patch
Attachment 353657
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9823227
New failing tests: http/tests/security/anchor-download-block-crossorigin.html
EWS Watchlist
Comment 4
2018-11-01 18:18:28 PDT
Created
attachment 353671
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 5
2018-11-02 03:46:42 PDT
Comment on
attachment 353657
[details]
Patch Clearing flags on attachment: 353657 Committed
r237728
: <
https://trac.webkit.org/changeset/237728
>
WebKit Commit Bot
Comment 6
2018-11-02 03:46:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-02 03:47:37 PDT
<
rdar://problem/45758686
>
Guillaume Emont
Comment 8
2018-11-02 04:00:09 PDT
***
Bug 191168
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug