REGRESSION(r237547): Exception handlers should be aware of wide opcodes when JIT is disabled https://bugs.webkit.org/show_bug.cgi?id=191175

Reviewed by Keith Miller.

https://bugs.webkit.org/show_bug.cgi?id=191108 did not handle the case where JIT is not enabled

* jit/JITExceptions.cpp:
(JSC::genericUnwind):
* llint/LLIntData.h:
(JSC::LLInt::getWideCodePtr):


Canonical link: https://commits.webkit.org/205995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237728 268f45cc-cd09-0410-ab3c-d52691b4dbfc